--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html {
 	line-height: 1.15;
 	-ms-text-size-adjust: 100%;
@@ -209,4 +213,10 @@ template {
 html {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
+}
+
+.wrapper {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 20px;
 }
