--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -213,6 +213,8 @@ template {
 html {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
+	background-color: rgb(36, 36, 36);
+	color: white;
 }
 
 .wrapper {
